// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing GifExpertApp should be show a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Dragon ball"
      key="Dragon ball"
    />
    <GifGrid
      category="Boku no Hero"
      key="Boku no Hero"
    />
  </ol>
</Fragment>
`;

exports[`Testing GifExpertApp should be show correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
